--- a/public/index.html
+++ b/public/index.html
@@ -83,7 +83,7 @@ const perros = firebase.functions().httpsCallable('perros2');
         method: 'POST',
         body: formData
         }).catch(err => {console.log(err);})
-        //.then(response => {return response.json()})
+        .then(response => {return response.json()})
         .then(res => {    
           console.log(res);                                  
         });
